addressed mike's comments; see ***changes***

--- a/writing/hr-resource-stoch.bib
+++ b/writing/hr-resource-stoch.bib
@@ -5359,3 +5359,32 @@ Version Number: 1},
 	langid = {english},
 	file = {Full Text:C\:\\Users\\stefa\\Zotero\\storage\\KVCTM7BL\\Wang et al. - 2019 - Stochastic simulations reveal few green wave surfi.pdf:application/pdf},
 }
+
+@article{fretwell_territorial_1969,
+	title = {On territorial behavior and other factors influencing habitat distribution in birds: I. Theoretical development},
+	volume = {19},
+	rights = {http://www.springer.com/tdm},
+	issn = {0001-5342, 1572-8358},
+	url = {http://link.springer.com/10.1007/BF01601953},
+	doi = {10.1007/BF01601953},
+	shorttitle = {On territorial behavior and other factors influencing habitat distribution in birds},
+	pages = {16--36},
+	number = {1},
+	journaltitle = {Acta Biotheoretica},
+	shortjournal = {Acta Biotheor},
+	author = {Fretwell, Stephen Dewitt and Lucas, Henry L.},
+	urldate = {2024-04-08},
+	date = {1969-03},
+	langid = {english},
+}
+
+@book{fretwell_populations_2020,
+	title = {Populations in a Seasonal Environment. ({MPB}-5)},
+	isbn = {978-0-691-20964-7 978-0-691-08106-9},
+	url = {http://www.jstor.org/stable/10.2307/j.ctvx5wbqt},
+	publisher = {Princeton University Press},
+	author = {Fretwell, Stephen D.},
+	urldate = {2024-04-12},
+	date = {2020-03-31},
+	doi = {10.2307/j.ctvx5wbqt},
+}
